aggiunto imageUrl come parametro al FilmDto